--- a/package.json
+++ b/package.json
@@ -4,5 +4,11 @@
   "main": "app.js",
   "repository": "https://github.com/mboisnard/aws-lambda-authorizer",
   "author": "Mathieu Boisnard <mathieu.boisnard@lacombedulionvert.fr>",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "mocha": "^8.3.2"
+  }
 }
