--- a/lambda/package.json
+++ b/lambda/package.json
@@ -17,5 +17,9 @@
     "mocha": "^8.3.2",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "got": "^11.8.2",
+    "jsonwebtoken": "^8.5.1"
   }
 }
