--- a/lambda-authorizer-cloudformation.yml
+++ b/lambda-authorizer-cloudformation.yml
@@ -36,7 +36,7 @@ Resources:
       Code:
         ZipFile: !Sub |
           exports.handler = function(event, context) {
-            console.log('upload quicksight cognito code & update nodejs version to nodejs14.x');
+            console.log('Upload built lambda authorizer code & update nodejs version to nodejs14.x');
           };
 
   LambdaApiGatewayPermission:
